2017-04-10  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r28204.

	* nasl/nasl_var.c (array2str): Use glib strings instead of manually
	reallocating buffer string. Fix invalid memory write.

2017-03-14  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r27986.

	* misc/plugutils.c (plug_get_key): Set the SIGTERM handler to _exit in
	forked child case.

2017-02-15  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r27650.

	* nasl/nasl_crypto.c (nasl_ntlm2_response, nasl_ntlm_response): Fix
	possible segfaults.
	(nasl_nt_owf_gen, nasl_lm_owf_gen): Fix error messages.

2017-02-07  Hani Benhabiles <hani.benhabiles@greenbone.net>

	* misc/openavas_auth.c (openvas_auth_classic): Remove static modifier.

	* misc/openvas_auth.h: Add openvas_auth_classic() header.

2017-01-30  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Backport r26904.

	* nasl/nasl_cert.c (build_hostname_list): Remove restriction on adding
	CN values without a dot.

2017-01-27  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Backport r27373.

	* misc/prefs.c (prefs_set): Fix possible use-after-free when old and
	value point to the same data.

2016-11-22  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Backport r26704 and r26707.

	* misc/network.c (socket_negotiate_ssl, open_stream_connection_ext):
	Check Host/SNI/$Port/force_disable before setting the SNI.

2016-11-16  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Backport r26683.

	* misc/network.c (open_SSL_connection): Don't fail the handshake upon receiving a
	non-fatal alert like unrecognized name.

2016-11-15  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Backport r26648.

	* misc/network.c (is_ip_address): New function.
	(open_SSL_connection): Don't use hostname if it is an IP address.

2016-11-08  Hani Benhabiles <hani.benhabiles@greenbone.net>

	Backport r26513 and r26527.

	* misc/network.c (open_SSL_connection): Add hostname parameter. Set TLS
	SNI accordingly.